fix for spacing

--- a/src/styles/mi-mixins/_mi-make-modifiers.scss
+++ b/src/styles/mi-mixins/_mi-make-modifiers.scss
@@ -14,7 +14,7 @@
 
 }
 
-@mixin mi-make-modifiers($variable-map: $map-sizes, $properties...) {
+@mixin mi-make-modifiers-breakpoint-under($variable-map: $map-sizes, $properties...) {
 
   @each $size, $size-value in $variable-map {
     @each $breakpoint-label, $breakpoint-size in $map-breakpoints {
@@ -30,7 +30,7 @@
 
 }
 
-@mixin mi-make-modifiers($variable-map: $map-sizes, $properties...) {
+@mixin mi-make-modifiers-breakpoint-over($variable-map: $map-sizes, $properties...) {
 
   @each $size, $size-value in $variable-map {
     @each $breakpoint-label, $breakpoint-size in $map-breakpoints {
